сделал 9 задание
