# openapi/openapi.yaml
@@ -4,19 +4,6 @@ info:
   version: 1.0.0
 paths:
   /tasks:
-    get:
-      summary: Get all tasks
-      tags:
-        - tasks
-      responses:
-        '200':
-          description: A list of tasks
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Task'
     post:
       summary: Create a new task
       tags:
@@ -37,6 +24,26 @@ paths:
                 $ref: '#/components/schemas/Task'
 
   /tasks/{id}:
+    get:
+      summary: Get tasks by user id
+      tags:
+        - tasks
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the user to update
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: A list of tasks
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Task'
     patch:
       summary: Update a task
       tags:
@@ -79,7 +86,7 @@ paths:
           schema:
             type: integer
       responses:
-        '200':
+        '204':
           description: Successfully deleted task
         '404':
           description: Task not found
@@ -162,7 +169,7 @@ paths:
           schema:
             type: integer
       responses:
-        '200':
+        '204':
           description: Successfully deleted user
         '404':
           description: User not found
@@ -182,6 +189,14 @@ components:
           type: string
         is_done: 
           type: boolean
+        user_id:
+          type: integer
+          format: uint
+          minimum: 0
+          description: ID пользователя, которому принадлежит задача
+          example: 1
+        user:
+          $ref: '#/components/schemas/User'
 
     User:
       type: object
@@ -207,3 +222,7 @@ components:
           format: date-time
           nullable: true
           readOnly: true
+        tasks:
+          type: array
+          items:
+            $ref: '#/components/schemas/Task'
